# banknote-authentication-ml

./: .gitattributes  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.cfg  streamlit_app.py
banknote_auth/: __init__.py  app.py  config.py  dataset.py  features.py  plots.py
banknote_auth/logs/: prediction_log.csv
banknote_auth/modeling/: models.py  predict.py  train.py
deployment/: app_gradio.py  app_streamlit.py
models/: best_model.pkl  scaler.pkl  voting_classifier.pkl
notebooks/: 1.0-po-Banknote-Authentication.ipynb  1.0-po-banknote-evaluation.ipynb
notebooks/data/processed/: data_cleaned.csv
notebooks/reports/metrics/: classification_report.txt
reports/metrics/: classification_report.json
tests/: test_data.py  test_train.py
