[flake8]
ignore = E731,E266,E501,C901,W503
max-line-length = 99
exclude = .git,notebooks,references,models,data

[metadata]
name = banknote_auth
version = 0.1.0
description = ML project to classify forged banknotes
author = Peter Ugonna Obi
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    scikit-learn
    xgboost
    loguru
    joblib
    jupyter
    matplotlib
    seaborn

[options.package_data]
* = *.csv, *.txt

[options.extras_require]
dev =
    black
    isort

